--- a/Persons/UI/add_person_window.ui
+++ b/Persons/UI/add_person_window.ui
@@ -106,6 +106,26 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Email</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Phone Number</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="le_email"/>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="le_phoneNumber"/>
+      </item>
      </layout>
     </widget>
    </item>
