--- a/Sign_Up/UI/Sign_Up_Window.ui
+++ b/Sign_Up/UI/Sign_Up_Window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>W_Login_Form</class>
- <widget class="QWidget" name="W_Login_Form">
+ <class>W_Signup_Form</class>
+ <widget class="QWidget" name="W_Signup_Form">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -26,7 +26,7 @@
    <item row="0" column="0" colspan="3">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Welcome! Please Login</string>
+      <string>Please Sign Up</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -56,7 +56,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0" colspan="2">
+      <item row="3" column="0" colspan="2">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Orientation::Vertical</enum>
@@ -69,7 +69,7 @@
         </property>
        </spacer>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QPushButton" name="pb_ok">
         <property name="text">
          <string>Ok</string>
@@ -80,7 +80,7 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="5" column="1">
        <widget class="QPushButton" name="pb_cancel">
         <property name="text">
          <string>Cancel</string>
@@ -91,10 +91,17 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
-       <widget class="QCommandLinkButton" name="clb_signup">
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>New to the App? Sign up here.</string>
+         <string>Retype Password</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="le_retype_password">
+        <property name="echoMode">
+         <enum>QLineEdit::EchoMode::Password</enum>
         </property>
        </widget>
       </item>
@@ -113,6 +120,9 @@
  <tabstops>
   <tabstop>le_UserID</tabstop>
   <tabstop>le_Password</tabstop>
+  <tabstop>le_retype_password</tabstop>
+  <tabstop>pb_ok</tabstop>
+  <tabstop>pb_cancel</tabstop>
  </tabstops>
  <resources>
   <include location="../../Icons/Icons.qrc"/>
