Add email and phone number fields to add person dialog and update tab order.

--- a/Persons/UI/add_person_window.ui
+++ b/Persons/UI/add_person_window.ui
@@ -141,6 +141,8 @@
  <tabstops>
   <tabstop>le_first_name</tabstop>
   <tabstop>le_last_name</tabstop>
+  <tabstop>le_email</tabstop>
+  <tabstop>le_phoneNumber</tabstop>
   <tabstop>pb_submit</tabstop>
   <tabstop>pb_close</tabstop>
  </tabstops>
